--- a/package.json
+++ b/package.json
@@ -1,18 +1,29 @@
 {
-  "name": "RNLibrary",
-  "version": "0.0.1",
-  "private": true,
+  "name": "rn-webview-library",
+  "version": "0.1.0",
+  "description": "A customizable WebView SDK for React Native applications",
+  "private": false,
+  "main": "lib/commonjs/index.js",
+  "module": "lib/module/index.js",
+  "types": "lib/typescript/index.d.ts",
+  "files": [
+    "lib/",
+    "src/"
+  ],
   "scripts": {
     "android": "react-native run-android",
     "ios": "react-native run-ios",
     "lint": "eslint .",
     "start": "react-native start",
-    "test": "jest"
+    "test": "jest",
+    "build": "bob build",
+    "prepare": "bob build"
   },
-  "dependencies": {
-    "react": "19.0.0",
-    "react-native": "0.79.2",
-    "react-native-webview": "^11.23.1"
+  "dependencies": {},
+  "peerDependencies": {
+    "react": "*",
+    "react-native": "*",
+    "react-native-webview": ">=11.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
@@ -31,10 +42,41 @@
     "eslint": "^8.19.0",
     "jest": "^29.6.3",
     "prettier": "2.8.8",
+    "react": "19.0.0",
+    "react-native": "0.79.2",
+    "react-native-builder-bob": "^0.23.2",
+    "react-native-webview": "^11.23.1",
     "react-test-renderer": "19.0.0",
     "typescript": "5.0.4"
   },
   "engines": {
     "node": ">=18"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/M-Bekheet/RN-WebView-SDK.git"
+  },
+  "keywords": [
+    "react-native",
+    "webview",
+    "sdk",
+    "library",
+    "react-native-webview"
+  ],
+  "author": "Mahmoud Bekheet",
+  "license": "MIT",
+  "react-native-builder-bob": {
+    "source": "src",
+    "output": "lib",
+    "targets": [
+      "commonjs",
+      "module",
+      [
+        "typescript",
+        {
+          "project": "tsconfig.build.json"
+        }
+      ]
+    ]
   }
 }
